--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -192,6 +192,12 @@
 		padding-bottom: 4rem;
 	}
 
+	.section-12, .section-6 {
+		.justify-content-start {
+			justify-content: center !important;
+		}
+	}
+
 }
 
 @media (max-width: 575px) {
